--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -710,6 +710,8 @@ fieldset {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
+    width: 100%;
+    justify-content: flex-end;
 }
 
 .dashboard .nav .links .links-wrap {
@@ -810,9 +812,6 @@ fieldset {
 .dashboard .main {
     min-height: 85vh;
     background: #13131A;
-}
-
-.dashboard .main .lobby {
     margin-top: calc(3vw - 1vh);
 }
 
@@ -824,7 +823,7 @@ fieldset {
 .dashboard .main .lobby .general-info {
     display: flex;
     justify-content: space-between;
-    margin-top: calc(3vw - 1vh);
+    margin-top: 20px;
 }
 
 .dashboard .main .lobby .info {
@@ -1014,16 +1013,13 @@ fieldset {
     position: relative;
 }
 
-.dashboard .main .lobby .popular-products {
-    margin-top: calc(3vw - 1vh);
-}
-
 .dashboard .main .lobby .dashboard-slider {
     margin-top: 30px;
 }
 
 .dashboard .main .lobby .popular-products {
     text-align: center;
+    margin-top: 60px;
 }
 
 .dashboard .main .lobby .popular-products-slides {
@@ -1334,7 +1330,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .popular-products .popular-product {
-    width: 90%;
+    width: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1398,10 +1394,6 @@ fieldset {
 
 .dashboard .main .subscriptions .all-subscriptions {
     width: 100%;
-}
-
-.dashboard .main .FAQ {
-    margin-top: 50px;
 }
 
 .dashboard .main .FAQ .search-bar {
@@ -1635,11 +1627,8 @@ fieldset {
     }
     .dashboard .nav .links {
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         padding-left: 20px;
-    }
-    .dashboard .nav .links .links-wrap {
-        width: 1%;
     }
     .dashboard .nav .user-menu {
         border: none;
@@ -1738,7 +1727,10 @@ fieldset {
 
 @media (max-width: 800px) {
     .home .advantages .advantage {
-        flex-basis: 45%;
+        flex-basis: 50%;
+    }
+    .dashboard .main .product-info .popular-products .popular-product {
+        width: 100%;
     }
 }
 
@@ -1756,7 +1748,7 @@ fieldset {
 
 @media (max-width: 680px) {
     .dashboard .main .product-info .popular-products .products {
-        width: 75%;
+        width: 85%;
     }
 }
 
@@ -1804,7 +1796,7 @@ fieldset {
         height: 60vw;
     }
     .dashboard .main .product-info .popular-products .products {
-        width: 90%;
+        width: 100%;
     }
 }
 
